Regression: Edge Crease behaves differently between Complex and Simple Solidify #109691

Closed
opened 2023-07-04 12:51:31 +02:00 by Misha · 6 comments
First-time contributor

System Information
Operating system: Windows 10
Graphics card: Nvivia Titan XP

Blender Version
Broken: blender-3.6.0-windows-x64, blender-3.5.1-windows-x64
Worked: blender-3.3 LTS

This was a two-step regression:

First, creases broke with a8a454287a
Then, this got partly fixed with 57ea827bfb (but not fully it seems)

Short description of error
In this example when trying to use Solidify modifier in COMPLEX mode to get flat boundary in combination with Subdivision Surface modifier we see that that shape is distorted. But when we go to Edit mode - Vertex view and just slightly move the Vertex Crease slider - the shape becomes correct! Same file in Blender 3.3 LTS looks correct without any actions - just as it is.

Exact steps for others to reproduce the error
Based on the attached .blend file. There is a simple shape with creases on borders and Solidify (in Complex mode) and Subdivision modifiers.

**System Information** Operating system: Windows 10 Graphics card: Nvivia Titan XP **Blender Version** Broken: blender-3.6.0-windows-x64, blender-3.5.1-windows-x64 Worked: blender-3.3 LTS This was a two-step regression: First, creases broke with a8a454287a27d408668f8adc6fe1b3aa988de1ac Then, this got partly fixed with 57ea827bfb28eb697b74dbc606facbc133e10fab (but not fully it seems) **Short description of error** In this example when trying to use Solidify modifier in COMPLEX mode to get flat boundary in combination with Subdivision Surface modifier we see that that shape is distorted. But when we go to Edit mode - Vertex view and just slightly move the Vertex Crease slider - the shape becomes correct! Same file in Blender 3.3 LTS looks correct without any actions - just as it is. <video src="/attachments/ae4bdc39-8ad6-4d20-b578-74999e0ae820" title="Solidify Issue report.mp4" controls></video> **Exact steps for others to reproduce the error** Based on the attached .blend file. There is a simple shape with creases on borders and Solidify (in Complex mode) and Subdivision modifiers.
Misha added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-07-04 12:51:32 +02:00
Misha changed title from Strange behaviour of Solidify Modifier in Complex mode - Dlender 3.5 - 3.6 to Strange behaviour of Solidify Modifier in Complex mode - Blender 3.5 - 3.6 2023-07-04 12:52:04 +02:00

Applying the modifier to both cases, we can see that Edge Crease propagation in Solidify Complex is different from Simple.
image

This doesn't seem intentional, so I'm confirming it as a regression.

@weasel, would you like to check?

Applying the modifier to both cases, we can see that Edge Crease propagation in Solidify Complex is different from Simple. ![image](/attachments/4a5a25d1-3a60-477c-95c3-46627b399988) This doesn't seem intentional, so I'm confirming it as a regression. @weasel, would you like to check?
168 KiB
Iliya Katueshenock changed title from Strange behaviour of Solidify Modifier in Complex mode - Blender 3.5 - 3.6 to Regression: Strange behaviour of Solidify Modifier in Complex mode 2023-07-05 00:51:40 +02:00
Iliya Katueshenock added this to the 3.6 LTS milestone 2023-07-05 00:51:51 +02:00
Germano Cavalcante changed title from Regression: Strange behaviour of Solidify Modifier in Complex mode to Regression: Edge Crease behaves differently between Complex and Simple Solidify 2023-07-05 00:52:36 +02:00
Member

This was a two-step regression:

First, creases broke with a8a454287a
Then, this got partly fixed with 57ea827bfb (but not fully it seems)

CC @HooglyBoogly

This was a two-step regression: First, creases broke with a8a454287a27d408668f8adc6fe1b3aa988de1ac Then, this got partly fixed with 57ea827bfb28eb697b74dbc606facbc133e10fab (but not fully it seems) CC @HooglyBoogly
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-07-05 22:40:41 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-07-05 22:53:41 +02:00
Member

Thanks for the report. Fixed by 7538127a58 in 3.6 and c65fa57b0b in main.

Thanks for the report. Fixed by 7538127a58067d1ed68db300f35a2c20658034a8 in 3.6 and c65fa57b0b6283a35a385b932f84b5f023241360 in `main`.
Author
First-time contributor

Thanks for the report. Fixed by 7538127a58 in 3.6 and c65fa57b0b in main.

Thank you for what you do!

> Thanks for the report. Fixed by 7538127a58067d1ed68db300f35a2c20658034a8 in 3.6 and c65fa57b0b6283a35a385b932f84b5f023241360 in `main`. Thank you for what you do!
Author
First-time contributor

Thanks for the report. Fixed by 7538127a58 in 3.6 and c65fa57b0b in main.

When the change will be applied to the distributive? The next update?

> Thanks for the report. Fixed by 7538127a58067d1ed68db300f35a2c20658034a8 in 3.6 and c65fa57b0b6283a35a385b932f84b5f023241360 in `main`. When the change will be applied to the distributive? The next update?
Member

The fix will be in 3.6.1 and 4.0.

The fix will be in 3.6.1 and 4.0.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#109691
No description provided.