Fix #109691: Edge crease not handled in complex solidify

a8a454287a27d408668f which moved edge creases out of `MEdge` only
retrieved the result data array if the mesh had vertex creases. Before
the processing always happened though. So process the result creases
if the input has edge creases too.